objects/vlocity_cmt__PromotionApplicableProduct__c.object
<CustomObject>
    <description>DEPRECATED. Use Promotion Item instead.</description>
    <fields>
        <fullName>vlocity_cmt__ContextOfferId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Context Offer</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Promotion Applicable Product</relationshipLabel>
        <relationshipName>PromotionApplicableProductContext</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicable Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Promotion Applicable Product (Applicable Product)</relationshipLabel>
        <relationshipName>PromotionApplicableProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PromotionId__c</fullName>
        <label>Promotion</label>
        <referenceTo>vlocity_cmt__Promotion__c</referenceTo>
        <relationshipLabel>Promotion Applicable Product</relationshipLabel>
        <relationshipName>PromotionApplicableProduct</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Promotion Applicable Product</label>
    <nameField>
        <label>Applicable Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Applicable Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>